@@ -1334,3 +1334,8 @@ Tue Jul 31 15:24:50 2001                        Michael Jennings (mej)
 
 If zaxxon would behave itself, we'd be doing a lot better.
 ----------------------------------------------------------------------
+Tue Jul 31 20:30:08 2001                        Michael Jennings (mej)
+
+Looks like builds are working now, and I've converted the parallel
+stuff.  We'll see how that goes tomorrow.
+----------------------------------------------------------------------
